Add blog content

--- a/content/apps.html
+++ b/content/apps.html
@@ -17,7 +17,7 @@ type='standard'
     </p>
     <h1>sapio</h1>
         a flexible and powerful smart contracting language that enables stateful smart contracts.
-    <br> <a href="/sapio/" class='underlined'>learn more > </a>
+    <br> <a href="/blog/sapio/" class='underlined'>learn more > </a>
     <h1>grotto</h1>
         a suite of 100% self-custodial wallet vault apps that empower users to practically manage
         and spend funds in cold storage while minimizing risk factors.
@@ -26,7 +26,7 @@ type='standard'
         a withdrawal service that helps exchanges and other custodians batch their
         transactions together, improving privacy and throughput.
 
-    <h1>slip</h1>
+    <h1>diem</h1>
         a system for creating cancellable recurring payment slips without requiring an online server
         for normal operation and allowing recipients to draw liquidity at their preference.
     <h1>liminal</h1>
