--- a/content/mission.html
+++ b/content/mission.html
@@ -74,6 +74,30 @@ type='standard'
 
     <h1>unbreakable base layer.</h1>
 
+    <p>
+        bitcoin will be under attack by faceless adversaries threatened by permissionless
+        censorship-resistant money or those who seek to profit from instability.
+    </p>
+    <p>
+        as stewards of the bitcoin protocol, it is our job to stop all such efforts dead in their
+        tracks. bitcoin is strong, but not unbreakable. though many memes have been made to suggest
+        otherwise, the reality is that bitcoin's promise of unbreakability is yet to be achieved. at
+        judica we recognize the reality of what bitcoin is secure against and what it is not.
+    </p>
+    <p>
+        where there are gaps between what we expect bitcoin does and what it is able to do, we're
+        working diligently to discover and patch them. you can't hand wave away security
+        vulnerabilities, you can only fix them.
+    </p>
+    <p>
+        we have three guiding principles for an unbreakable bitcoin:
+    </p>
+    <ol>
+        <li>fix while ahead: a vector that seems hard to exploit today will seem easier tomorrow.</li>
+        <li>don't make assumptions about an attacker's rationality.</li>
+        <li></li>
+    </ol>
+
 </div>
 <div class="main">
 
