--- a/content/mission.html
+++ b/content/mission.html
@@ -69,7 +69,7 @@ type='standard'
     <ol>
         <li>more diverse use; more security.</li>
         <li>more likely you can use you bitcoin when you need to.</li>
-        <li></li>
+        <li>increases distribution of coins.</li>
     </ol>
 
     <h1>unbreakable base layer.</h1>
@@ -95,11 +95,11 @@ type='standard'
     <ol>
         <li>fix while ahead: a vector that seems hard to exploit today will seem easier tomorrow.</li>
         <li>don't make assumptions about an attacker's rationality.</li>
-        <li></li>
+        <li>easier to understand code is easier to secure.</li>
     </ol>
 
 </div>
 <div class="main">
 
-    <h1 class='lead'> will you <a href="/join/" class='underlined'>join</a> us? </a>
+    <h1 class='lead'><a href="/join/" class='underlined'>will you join us?</a> </h1>
 </div>
