replace mempool link

--- a/content/apps.html
+++ b/content/apps.html
@@ -35,7 +35,7 @@ type='standard'
     <h1>epoch mempool</h1>
         architectural improvements to bitcoin's mempool to make transaction processing blazing fast
         and eliminate potential denial of service attacks.
-    <br> <a href="https://github.com/bitcoin/bitcoin/projects/14" class='underlined'>learn more > </a>
+    <br> <a href="/blog/mempool/" class='underlined'>learn more > </a>
 
 
 </div>
