get rid of custom layouts

--- a/content/join.html
+++ b/content/join.html
@@ -1,43 +1,32 @@
 +++
-title="join"
+title="join our crew"
+img = "/img/chain.gif"
 draft=false
 type='standard'
 +++
-<div class="main">
-    <img src="/img/chain.gif"/>
-    <h1 class="lead">join our crew</h1>
-</div>
+<h1 style="text-align: center">build with us</h1>
 <hr/>
-<div class="main2">
-    <div class="">
-        <p style='text-align: left'>
-        we're looking to bring on a few individuals who are electrified by Judica's mission and want to
-        build with us.  contact <a href="mailto:join@judica.org">join@judica.org</a> for more
-        information. we're currently looking for individuals with the below areas of expertise, but
-        please reach out even if you're not quite a perfect fit for any of those categories:
-        </p>
-        <ul style='text-align: left'>
-            <li>  programming language engineer</li>
-            <li>  bitcoin core contributor</li>
-            <li>  smart contract engineer</li>
-            <li>  application engineer</li>
-        </ul>
-    </div>
-</div>
-<div class="main">
-    <h1 class="lead">support our cause</h1>
-</div>
+<p style='text-align: left'>
+we're looking to bring on a few individuals who are electrified by Judica's mission and want to
+build with us.  contact <a href="mailto:join@judica.org">join@judica.org</a> for more
+information. we're currently looking for individuals with the below areas of expertise, but
+please reach out even if you're not quite a perfect fit for any of those categories:
+</p>
+<ul style='text-align: left'>
+    <li>  programming language engineer</li>
+    <li>  bitcoin core contributor</li>
+    <li>  smart contract engineer</li>
+    <li>  application engineer</li>
+</ul>
+
+<h1 style="text-align: center">support our projects</h1>
 <hr/>
-<div class="main2">
-    <div class="">
-        <p>
-            we're a community funded organization. we're looking for companies and individuals who
-            understand the value of our <a href="/mission/">mission</a> and can fiscally support us.
-            Please contact <a href="mailto:funding@judica.org">funding@judica.org</a> to discuss how
-            you can help.
-        </p>
-        <p> with thanks to the following organizations for their support: <a href="https://contract.design/">Digital Contract
+    <p>
+    we're a community funded organization. we're looking for companies and individuals who
+    understand the value of our <a href="/mission/">mission</a> and can fiscally support us.
+    Please contact <a href="mailto:funding@judica.org">funding@judica.org</a> to discuss how
+    you can help.
+    </p>
+    <p> with thanks to the following organizations for their support: <a href="https://contract.design/">Digital Contract
         Design</a>,
-        <a href="https://acinq.co">ACINQ</a>, <a href="https://www.100x.group/">100x Group</a>, <a href="https://www.delphidigital.io/">Delphi Digital</a>.
-    </div>
-</div>
+    <a href="https://acinq.co">ACINQ</a>, <a href="https://www.100x.group/">100x Group</a>, <a href="https://www.delphidigital.io/">Delphi Digital</a>.
