--- a/content/mission.html
+++ b/content/mission.html
@@ -1,22 +1,17 @@
 +++
-title='mission'
+title='our mission'
+img = "/img/coin.gif"
 draft=false
 type='standard'
 +++
 
-<div class="main">
-    <img src="/img/coin.gif"/>
-    <h1 class="lead">our mission</h1>
-</div>
-<hr/>
-<div class="main2">
     <h1> self-custody for all.</h1>
     <p>
         by now we've all heard the maxim, <i>"not your keys, not your coin,"</i> but self custody of
         bitcoin can be difficult to use and easy to mess up, leading many users to prefer to use
         trusted third parties like exchanges to store their funds. these trusted third parties are
         centralized choke points where governments or other nefarious actors may steal coins or
-        prevent you from spending you coin when you need to. in the free world, our institutions and
+        prevent you from spending your coin when you need to. in the free world, our institutions and
         rights to due process make these concerns seem less pressing. but bitcoin aspires to be able
         to serve users world wide living under less friendly regimes. if history is any lesson,
         liberal democratic societies do not always remain so.
@@ -85,7 +80,7 @@ type='standard'
         judica we recognize the reality of what bitcoin is secure against and what it is not.
     </p>
     <p>
-        where there are gaps between what we expect bitcoin does and what it is able to do, we're
+        where there are gaps between what we expect bitcoin to do and what it actually does, we're
         working diligently to discover and patch them. you can't hand wave away security
         vulnerabilities, you can only fix them.
     </p>
@@ -98,8 +93,5 @@ type='standard'
         <li>easier to understand code is easier to secure.</li>
     </ol>
 
-</div>
-<div class="main">
 
-    <h1 class='lead'><a href="/join/" class='underlined'>will you join us?</a> </h1>
-</div>
+    <h1 ><a href="/join/" class='underlined'>will you join us?</a> </h1>
