--- a/content/software.html
+++ b/content/software.html
@@ -1,23 +1,16 @@
 +++
-title="apps"
+title="software by judica"
+img="/img/contract.gif"
 draft=false
 type='standard'
 +++
-<div class="main">
-    <img src="/img/contract.gif"/>
-    <h1 class="lead">software by judica</h1>
-</div>
-<hr/>
-<div class="main2">
-    <p>
         judica is creating software that will have a remarkable impact on the
         bitcoin ecosystem. we endeavor to provide these to the community openly. these applications
         use judica's cutting edge bitcoin technologies, but we're exploring options to make them
         available in a limited fashion without any new features added to Bitcoin.
-    </p>
     <h1>sapio</h1>
         a flexible and powerful smart contracting language that enables stateful smart contracts.
-    <br> <a href="/blog/sapio/" class='underlined'>learn more > </a>
+    <br> <a href="/blog/sapio-tutorial/" class='underlined'>learn more > </a>
     <h1>grotto</h1>
         a suite of 100% self-custodial wallet vault apps that empower users to practically manage
         and spend funds in cold storage while minimizing risk factors.
@@ -32,10 +25,13 @@ type='standard'
     <h1>liminal</h1>
         a protocol for creating, marketing, and managing synthetic bitcoin denominated derivatives
         based on blind federations of oracle data providers.
-    <h1>epoch mempool</h1>
-        architectural improvements to bitcoin's mempool to make transaction processing blazing fast
-        and eliminate potential denial of service attacks.
+    <h1>bip-119 ctv</h1>
+        a simple soft-fork proposal for enabling covenants, an advanced bitcoin smart contract technique.
+        <br> <a href="https://utxos.org/" class="underlined">learn more ></a>
+    <h1>mempool work</h1>
+        architectural improvements to bitcoin's mempool to make transaction processing blazing fast,
+        eliminate potential denial of service attacks, and provide more sound ways of bumping
+        transaction fees.
     <br> <a href="/blog/mempool/" class='underlined'>learn more > </a>
 
 
-</div>
