big reorganization of information

--- a/content/charter.html
+++ b/content/charter.html
@@ -1,9 +1,18 @@
 +++
-title='our mission'
-img = "/img/coin.gif"
+title='charter'
 draft=false
 type='standard'
+img = "/img/genesis.gif"
 +++
+
+<p>
+judica's overarching goal is to fiscally empower humanity. we beleive bitcoin stands to be the
+vehicle that drives this empowerment, but only if the bitcoin community keeps a dedicated focus
+on helping all users improve their fiscal liberty. judica aspires to be a nexus for the bitcoin
+community to develop the tools required to realize bitcoin's potential. our initial areas of focus
+are as follows:
+</p>
+
 
     <h1> self-custody for all.</h1>
     <p>
@@ -92,6 +101,3 @@ type='standard'
         <li>don't make assumptions about an attacker's rationality.</li>
         <li>easier to understand code is easier to secure.</li>
     </ol>
-
-
-    <h1 ><a href="/join/" class='underlined'>will you join us?</a> </h1>
