--- a/content/join/_index.html
+++ b/content/join/_index.html
@@ -1,31 +1,51 @@
 +++
-title="join our crew"
 img = "/img/chain.gif"
 draft=false
 +++
-<h1 style="text-align: center">build with us</h1>
-<hr/>
-<p style='text-align: left'>
-we're looking to bring on a few individuals who are electrified by Judica's mission and want to
-build with us.  contact <a href="mailto:join@judica.org">join@judica.org</a> for more
-information. we're currently looking for individuals with the below areas of expertise, but
-please reach out even if you're not quite a perfect fit for any of those categories:
-</p>
-<ul style='text-align: left'>
-    <li>  programming language engineer</li>
-    <li>  bitcoin core contributor</li>
-    <li>  smart contract engineer</li>
-    <li>  application engineer</li>
-</ul>
+<div>
+    <div style="display: grid; grid-template-columns: 1fr 0.25fr 1fr; width:75%; margin:auto;">
 
-<h1 style="text-align: center">support our projects</h1>
-<hr/>
-    <p>
-    we're a community funded organization. we're looking for companies and individuals who
-    understand the value of our <a href="/mission/">mission</a> and can fiscally support us.
-    Please contact <a href="mailto:funding@judica.org">funding@judica.org</a> to discuss how
-    you can help.
-    </p>
-    <p> with thanks to the following organizations for their support: <a href="https://contract.design/">Digital Contract
-        Design</a>,
-    <a href="https://acinq.co">ACINQ</a>, <a href="https://www.100x.group/">100x Group</a>, <a href="https://www.delphidigital.io/">Delphi Digital</a>.
+        <div>
+            <h1 style="text-align: center">build with us</h1>
+            <hr/>
+            <p style='text-align: left'>
+            we're looking to bring on a few individuals who are electrified by Judica's mission and want to
+            build with us.  contact <a href="mailto:join@judica.org">join@judica.org</a> for more
+            information. we're currently looking for individuals with the below areas of expertise, but
+            please reach out even if you're not quite a perfect fit for any of those categories:
+            </p>
+            <ul style='text-align: left'>
+                <li>  programming language engineer</li>
+                <li>  bitcoin core contributor</li>
+                <li>  smart contract engineer</li>
+                <li>  application engineer</li>
+            </ul>
+        </div>
+        <div></div>
+
+        <div>
+            <h1 style="text-align: center">fund our work</h1>
+            <hr/>
+            <p>
+            we're a community funded organization. we're looking for companies and individuals who
+            understand the value of our <a href="/mission/">mission</a> and can fiscally support us.
+            Please contact <a href="mailto:funding@judica.org">funding@judica.org</a> to discuss how
+            you can help.
+            </p>
+            <p> with thanks to the following organizations for their support: <a href="https://contract.design/">Digital Contract
+                Design</a>,
+            <a href="https://acinq.co">ACINQ</a>, <a href="https://www.100x.group/">100x Group</a>, <a href="https://www.delphidigital.io/">Delphi Digital</a>.
+        </div>
+    </div>
+
+    <h1 style="text-align:center"> get our newsletter </h1>
+    <hr>
+
+    <div style="width:100%;">
+        <div style="overflow:hidden; width:350px; height:100px; margin:auto;">
+            <iframe src="https://judica.substack.com/embed"  style="padding: 0; height:
+                                                           130px; width: 350px; position:
+                                                           relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+</div>
