--- a/content/about.html
+++ b/content/about.html
@@ -1,97 +1,17 @@
 +++
-title='our mission'
-img = "/img/coin.gif"
 draft=false
 type='standard'
 +++
 
-    <h1> self-custody for all.</h1>
-    <p>
-        by now we've all heard the maxim, <i>"not your keys, not your coin,"</i> but self custody of
-        bitcoin can be difficult to use and easy to mess up, leading many users to prefer to use
-        trusted third parties like exchanges to store their funds. these trusted third parties are
-        centralized choke points where governments or other nefarious actors may steal coins or
-        prevent you from spending your coin when you need to. in the free world, our institutions and
-        rights to due process make these concerns seem less pressing. but bitcoin aspires to be able
-        to serve users world wide living under less friendly regimes. if history is any lesson,
-        liberal democratic societies do not always remain so.
-    </p>
+<div style="font-size: 1.4em">
+        {{< inline_partial src="fragments/mission.html" >}}
+</div>
 
-    <p> 
-        at judica we're bucking the trend of reliance on centralized trusted third parties by
-        building a future where users are empowered to manage state of the art coin custody
-        solutions without the need for trusted third parties. we have three guiding principles for
-        custody we're designing our solutions based on:
-    </p>
-
-    <ol>
-        <li>one size does not fit all.</li>
-        <li>inaccessible coins are useless.</li>
-        <li>minimize access to secure information.</li>
-    </ol>
+<div style='text-align:center'>
+<img src= "/img/coin.gif" />
+</div>
 
 
-    <h1>vibrant bitcoin economy.</h1>
-    <p>
-        does the government create the free market or does the free market create the government?
-        which came first, the chicken or the egg? regardless of the philosophical implications of
-        the answer to this question, one can analyze the impact that the government has on the free
-        market and if that effect inherently increases the freedom of the market or restricts it.
-    </p>
-    <p>
-        legislative and executive branches seem to only serve to attempt to manipulate or control
-        the free market, and often are mere participants in the market when appropriating goods or
-        services. however the judicial function of government is unique. imagine a world without any
-        judiciary. it would be nearly impossible to do business as there would be no means of
-        resolving disputes and enforcing contracts. we'd all still live in caves. fortunately, the
-        free market demands a judiciary, or the development of the judiciary system to hold men to
-        their word creates a free market. <i>homo sapiens</i> leave the relative safety of their
-        caves and our modern society is born.
-    </p>
-
-    <p>
-        bitcoin is the first native judiciary system for the internet. at judica (hence the name) we
-        believe we can help bitcoin fulfil its potential as the best judiciary system possible for
-        the internet. the more sophisticated disputes that can be adjudicated using bitcoin, the
-        more vibrant the bitcoin economy becomes.
-    </p>
-    <p>
-        endeavoring to create a vibrant bitcoin economy isn't a statement of opinion on the classic
-        'medium of exchange v. store of value' debate. bitcoin <i>the asset</i> can in many cases be
-        abstracted out to the reduced role as fungible collateral. rather, a vibrant bitcoin economy
-        has three main positive effects:
-    </p>
-    <ol>
-        <li>more diverse use; more security.</li>
-        <li>more likely you can use you bitcoin when you need to.</li>
-        <li>increases distribution of coins.</li>
-    </ol>
-
-    <h1>unbreakable base layer.</h1>
-
-    <p>
-        bitcoin will be under attack by faceless adversaries threatened by permissionless
-        censorship-resistant money or those who seek to profit from instability.
-    </p>
-    <p>
-        as stewards of the bitcoin protocol, it is our job to stop all such efforts dead in their
-        tracks. bitcoin is strong, but not unbreakable. though many memes have been made to suggest
-        otherwise, the reality is that bitcoin's promise of unbreakability is yet to be achieved. at
-        judica we recognize the reality of what bitcoin is secure against and what it is not.
-    </p>
-    <p>
-        where there are gaps between what we expect bitcoin to do and what it actually does, we're
-        working diligently to discover and patch them. you can't hand wave away security
-        vulnerabilities, you can only fix them.
-    </p>
-    <p>
-        we have three guiding principles for an unbreakable bitcoin:
-    </p>
-    <ol>
-        <li>fix while ahead: a vector that seems hard to exploit today will seem easier tomorrow.</li>
-        <li>don't make assumptions about an attacker's rationality.</li>
-        <li>easier to understand code is easier to secure.</li>
-    </ol>
 
 
-    <h1 ><a href="/join/" class='underlined'>will you join us?</a> </h1>
+
