--- a/content/charter.html
+++ b/content/charter.html
@@ -6,10 +6,8 @@ img = "/img/genesis.gif"
 +++
 
 <p>
-judica's overarching goal is to fiscally empower humanity. we beleive bitcoin stands to be the
-vehicle that drives this empowerment, but only if the bitcoin community keeps a dedicated focus
-on helping all users improve their fiscal liberty. judica aspires to be a nexus for the bitcoin
-community to develop the tools required to realize bitcoin's potential. our initial areas of focus
+{{< inline_partial src="fragments/charter-intro.html" >}}
+ our initial areas of focus
 are as follows:
 </p>
 
