--- a/content/software.html
+++ b/content/software.html
@@ -1,37 +1,46 @@
 +++
-title="software by judica"
-img="/img/contract.gif"
+title="software"
 draft=false
-type='standard'
 +++
-        judica is creating software that will have a remarkable impact on the
-        bitcoin ecosystem. we endeavor to provide these to the community openly. these applications
-        use judica's cutting edge bitcoin technologies, but we're exploring options to make them
-        available in a limited fashion without any new features added to Bitcoin.
-    <h1>sapio</h1>
-        a flexible and powerful smart contracting language that enables stateful smart contracts.
-    <br> <a href="/blog/sapio-tutorial/" class='underlined'>learn more > </a>
-    <h1>grotto</h1>
-        a suite of 100% self-custodial wallet vault apps that empower users to practically manage
-        and spend funds in cold storage while minimizing risk factors.
-        
-    <h1>joinder</h1> 
-        a withdrawal service that helps exchanges and other custodians batch their
-        transactions together, improving privacy and throughput.
+<p style="text-indent:0">
+judica is creating software that will have a remarkable impact on the
+bitcoin ecosystem. we endeavor to provide these to the community openly. these applications
+use judica's cutting edge bitcoin technologies, but we're exploring options to make them
+available in a limited fashion without any new features added to bitcoin.
+</p>
 
-    <h1>diem</h1>
-        a system for creating cancellable recurring payment slips without requiring an online server
-        for normal operation and allowing recipients to draw liquidity at their preference.
-    <h1>liminal</h1>
-        a protocol for creating, marketing, and managing synthetic bitcoin denominated derivatives
-        based on blind federations of oracle data providers.
-    <h1>bip-119 ctv</h1>
-        a simple soft-fork proposal for enabling covenants, an advanced bitcoin smart contract technique.
-        <br> <a href="https://utxos.org/" class="underlined">learn more ></a>
-    <h1>mempool work</h1>
-        architectural improvements to bitcoin's mempool to make transaction processing blazing fast,
-        eliminate potential denial of service attacks, and provide more sound ways of bumping
-        transaction fees.
-    <br> <a href="/blog/mempool/" class='underlined'>learn more > </a>
+<p style="text-indent:0">
+this page is an index of some of the projects currently in development at judica. consider <a
+                                                                                               href="/join/"
+                                                                                               class='underlined'>
+    joining us</a> if you want to work on them!
+</p>
+
+<img src="/img/contract.gif" style="margin:auto; width:100%" />
+<h1>sapio</h1>
+a flexible and powerful smart contracting language that enables stateful smart contracts.
+<br> <a href="/blog/sapio-tutorial/" class='underlined'>learn more > </a>
+<h1>grotto</h1>
+a suite of 100% self-custodial wallet vault apps that empower users to practically manage
+and spend funds in cold storage while minimizing risk factors.
+
+<h1>joinder</h1> 
+a withdrawal service that helps exchanges and other custodians batch their
+transactions together, improving privacy and throughput.
+
+<h1>diem</h1>
+a system for creating cancellable recurring payment slips without requiring an online server
+for normal operation and allowing recipients to draw liquidity at their preference.
+<h1>liminal</h1>
+a protocol for creating, marketing, and managing synthetic bitcoin denominated derivatives
+based on blind federations of oracle data providers.
+<h1>bip-119 ctv</h1>
+a simple soft-fork proposal for enabling covenants, an advanced bitcoin smart contract technique.
+<br> <a href="https://utxos.org/" class="underlined">learn more ></a>
+<h1>mempool work</h1>
+architectural improvements to bitcoin's mempool to make transaction processing blazing fast,
+eliminate potential denial of service attacks, and provide more sound ways of bumping
+transaction fees.
+<br> <a href="/blog/mempool/" class='underlined'>learn more > </a>
 
 
