--- a/content/join/_index.html
+++ b/content/join/_index.html
@@ -1,9 +1,26 @@
 +++
 img = "/img/chain.gif"
+title="join"
 draft=false
 +++
+
+<div class="main2" style='text-algin:left'>
+    <h1 class="lead">join.</h1>
+</div>
+<hr>
+<div class="main2">
+    <div style="font-size: 1.4em">
+        welcome to judica; let's make bitcoin better, together.
+    </div>
+    <div style="display: grid; grid-template-columns: 0.5fr 1fr 0.5fr">
+        <div></div>
+        <img src="/img/chain.gif" width="100%"/>
+        <div></div>
+    </div>
+</div>
 <div>
     <div style="display: grid; grid-template-columns: 1fr 0.25fr 1fr; width:75%; margin:auto;">
+
 
         <div>
             <h1 style="text-align: center">build with us</h1>
@@ -36,16 +53,29 @@ draft=false
                 Design</a>,
             <a href="https://acinq.co">ACINQ</a>, <a href="https://www.100x.group/">100x Group</a>, <a href="https://www.delphidigital.io/">Delphi Digital</a>.
         </div>
-    </div>
+        <div style="text-align: center">
+            <h1 >telegram channel</h1>
+            <hr/>
+            <h2><a href="https://t.me/judicaorg">t.me/judicaorg</a></h2>
+        </div>
+        <div></div>
 
-    <h1 style="text-align:center"> get our newsletter </h1>
-    <hr>
+        <div>
+            <h1 style="text-align:center"> newsletter </h1>
+            <hr>
+            <p style="width:80%; margin:auto; padding-bottom:10px;">
+            want to stay up to date with the latest updates and blog posts from judica? sign up below
+            via substack:
+            </p>
 
-    <div style="width:100%;">
-        <div style="overflow:hidden; width:350px; height:100px; margin:auto;">
-            <iframe src="https://judica.substack.com/embed"  style="padding: 0; height:
-                                                           130px; width: 350px; position:
-                                                           relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
+            <div style="width:100%;">
+                <div style="overflow:hidden; width:350px; height:100px; margin:auto;">
+                    <iframe src="https://judica.substack.com/embed"  style="padding: 0; height:
+                                                                            130px; width: 350px; position:
+                                                                            relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
+                </div>
+            </div>
         </div>
     </div>
+
 </div>
