Not sure what I changed but a lot of incremental stuff

--- a/content/join/_index.html
+++ b/content/join/_index.html
@@ -18,10 +18,8 @@ draft=false
         <div></div>
     </div>
 </div>
-<div>
-    <div style="display: grid; grid-template-columns: 1fr 0.25fr 1fr; width:75%; margin:auto;">
-
-
+<div class="main2">
+    <div class="joinpage">
         <div>
             <h1 style="text-align: center">build with us</h1>
             <hr/>
@@ -71,8 +69,8 @@ draft=false
             <div style="width:100%;">
                 <div style="overflow:hidden; width:350px; height:100px; margin:auto;">
                     <iframe src="https://judica.substack.com/embed"  style="padding: 0; height:
-                                                                            130px; width: 350px; position:
-                                                                            relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
+                                                                              130px; width: 350px; position:
+                                                                              relative; top: -5px; left: -15px;" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
         </div>
