--- a/content/about.html
+++ b/content/about.html
@@ -7,7 +7,7 @@ type='about'
     <h1 class="lead">about.</h1>
 </div>
 <hr>
-<div style="width:75%; margin:auto">
+<div class="main2">
     <div style="font-size: 1.4em">
         {{< inline_partial src="fragments/mission.html" >}}
     </div>
@@ -33,7 +33,7 @@ type='about'
 </div>
 
 <hr>
-<div style="width:75%; margin:auto">
+<div class="main2">
     <div>
         {{< inline_partial src="fragments/joinlet.html" >}}
     </div>
