--- a/content/about.html
+++ b/content/about.html
@@ -34,6 +34,33 @@ type='about'
 
 <hr>
 <div class="main2">
+    <h2>team</h2>
+    <hr>
+    <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 20px">
+
+        <div>
+            <img src="/img/team/jeremy.jpg" width="100%"/>
+            <a href="https://twitter.com/JeremyRubin">@jeremyrubin</a>
+            <br>
+            founder/ceo
+        </div>
+        <div>
+            <img src="/img/team/ponzini.jpg" width="100%"/>
+            <a href="https://twitter.com/ponzini">@ponzini</a>
+            <br>
+            software engineer
+        </div>
+        <div>
+            <img src="/img/team/keags.jpg" width="100%"/>
+            <a href="https://twitter.com/proofofkeags">@proofofkeags</a>
+            <br>
+            staff research engineer
+        </div>
+    </div>
+
+</div>
+<hr>
+<div class="main2">
     <div>
         {{< inline_partial src="fragments/joinlet.html" >}}
     </div>
