Cleanups of main sections & replace wizard with app type text

--- a/content/join/_index.html
+++ b/content/join/_index.html
@@ -30,10 +30,10 @@ draft=false
             please reach out even if you're not quite a perfect fit for any of those categories:
             </p>
             <ul style='text-align: left'>
-                <li>  programming language engineer</li>
-                <li>  bitcoin core contributor</li>
-                <li>  smart contract engineer</li>
-                <li>  application engineer</li>
+                <li>  product design </li>
+                <li>  dao engineer</li>
+                <li>  community manager & events</li>
+                <li>  director of dao incubator</li>
             </ul>
         </div>
         <div></div>
@@ -62,8 +62,8 @@ draft=false
             <h1 style="text-align:center"> newsletter </h1>
             <hr>
             <p style="width:80%; margin:auto; padding-bottom:10px;">
-            want to stay up to date with the latest updates and blog posts from judica? sign up below
-            via substack:
+            want to stay up to date with the latest updates and blog posts from
+            judica? sign up below via substack:
             </p>
 
             <div style="width:100%;">
