--- a/content/software.html
+++ b/content/software.html
@@ -3,10 +3,10 @@ title="software"
 draft=false
 +++
 <p style="text-indent:0">
-judica is creating software that will have a remarkable impact on the
-bitcoin ecosystem. we endeavor to provide these to the community openly. these applications
-use judica's cutting edge bitcoin technologies, but we're exploring options to make them
-available in a limited fashion without any new features added to bitcoin.
+judica is creating software that will have a remarkable impact on the bitcoin
+ecosystem. we endeavor to provide these to the community openly. these
+applications are available without any new features added to bitcoin, and can
+leverage new features as they become available.
 </p>
 
 <p style="text-indent:0">
