Make charter more accurate

--- a/content/software.html
+++ b/content/software.html
@@ -17,23 +17,33 @@ this page is an index of some of the projects currently in development at judica
 </p>
 
 <img src="/img/contract.gif" style="margin:auto; width:100%" />
+
+<h1>judica dao</h1>
+a one-size-fits-all implementation of a dao on bitcoin with support for the
+features required by a multitude of use cases.
+<br> <a href="https://github.com/judica-org/judica-vm" class='underlined'>learn more > </a>
+
 <h1>sapio</h1>
 a flexible and powerful smart contracting language that enables stateful smart contracts.
-<br> <a href="/blog/sapio-tutorial/" class='underlined'>learn more > </a>
-<h1>grotto</h1>
-a suite of 100% self-custodial wallet vault apps that empower users to practically manage
-and spend funds in cold storage while minimizing risk factors.
+<br> <a href="https://learn.sapio-lang.org" class='underlined'>learn more > </a>
 
-<h1>joinder</h1> 
-a withdrawal service that helps exchanges and other custodians batch their
-transactions together, improving privacy and throughput.
+<h1>judica virtual machine</h1>
+a runtime engine for federated bitcoin smart contracts.
+<br> <a href="https://github.com/judica-org/judica-vm" class='underlined'>learn more > </a>
 
-<h1>diem</h1>
-a system for creating cancellable recurring payment slips without requiring an online server
-for normal operation and allowing recipients to draw liquidity at their preference.
-<h1>liminal</h1>
-a protocol for creating, marketing, and managing synthetic bitcoin denominated derivatives
-based on blind federations of oracle data providers.
+<h1>attestation chains</h1>
+a peer-to-peer system for network messages with anti-equivocation baked in
+<br> <a href="https://github.com/judica-org/judica-vm" class='underlined'>learn more > </a>
+
+<h1>sapio studio</h1>
+frontend application for developing and interacting with sapio smart contracts
+<br> <a href="https://github.com/sapio-lang/sapio-studio" class='underlined'>learn more > </a>
+
+
+
+
+<h1>other works</h1>
+<hr>
 <h1>bip-119 ctv</h1>
 a simple soft-fork proposal for enabling covenants, an advanced bitcoin smart contract technique.
 <br> <a href="https://utxos.org/" class="underlined">learn more ></a>
