--- a/content/charter.html
+++ b/content/charter.html
@@ -2,17 +2,85 @@
 title='charter'
 draft=false
 type='standard'
-img = "/img/genesis.gif"
+img = "/img/wizard2.gif"
 +++
 
 <p>
 {{< inline_partial src="fragments/charter-intro.html" >}}
- our initial areas of focus
-are as follows:
+ while there are many areas we could focus on, our singular vision is on
+ creating a...
 </p>
 
 
-    <h1> self-custody for all.</h1>
+
+    <h1>vibrant bitcoin economy.</h1>
+
+    <p>
+        bitcoin is the first native judiciary system for the internet. at judica (hence the name) we
+        believe we can help bitcoin fulfil its potential as the best judiciary system possible for
+        the internet. the more sophisticated disputes that can be adjudicated using bitcoin, the
+        more vibrant the bitcoin economy becomes.
+    </p>
+    <h3>how we're accomplishing our mission.</h3>
+    <p>
+        we're building a platform for decentralized autonomous organizations
+        (DAOs) on bitcoin.
+        
+        a DAO is a group of individuals that collectively manage a treasury of
+        digital assets with some set of algorithmic rules and objectives
+        determined by the members. for example, the DAO might endeavor to invest
+        in scientific research, manage the treasury for a defi protocol, or
+        administer the issuance art as nfts.
+
+        any DAO (and really, any bitcoin smart contract) can use our open
+        architecture to collectively self-custody and manage bitcoin and other
+        virtual assets. judica's profit interest -- we are a startup after all
+        -- is to provide value add apis, services, and support to the DAOs using
+        -- our open
+        architecture.
+    </p>
+    <p>
+        although DAOs can rightfully be lampooned for a number of reasons --
+        hallmark 'unserious' applications like buying the constitution; that the
+        D the A and the O in DAO may not be an accurate description of what they
+        do or how they function; or big public failures (remember <i>The</i>
+        DAO) -- they represent a nascent movement for coordinating the formation
+        of capital on decentralized rails that we're excited to be a part of.
+    </p>
+
+    <h3>why we believe this.</h3>
+    <p>
+        does the government create the free market or does the free market create the government?
+        which came first, the chicken or the egg? regardless of the philosophical implications of
+        the answer to this question, one can analyze the impact that the government has on the free
+        market and if that effect inherently increases the freedom of the market or restricts it.
+    </p>
+    <p>
+        legislative and executive branches seem to only serve to attempt to manipulate or control
+        the free market, and often are mere participants in the market when appropriating goods or
+        services. however the judicial function of government is unique. imagine a world without any
+        judiciary. it would be nearly impossible to do business as there would be no means of
+        resolving disputes and enforcing contracts. we'd all still live in caves. fortunately, the
+        free market demands a judiciary, or the development of the judiciary system to hold men to
+        their word creates a free market. <i>homo sapiens</i> leave the relative safety of their
+        caves and our modern society is born.
+    </p>
+
+    <p>
+        endeavoring to create a vibrant bitcoin economy isn't a statement of opinion on the classic
+        'medium of exchange v. store of value' debate. bitcoin <i>the asset</i> can in many cases be
+        abstracted out to the reduced role as fungible collateral. rather, a vibrant bitcoin economy
+        has three main positive effects:
+    </p>
+    <ol>
+        <li>more diverse use; more security.</li>
+        <li>more likely you can use you bitcoin when you need to.</li>
+        <li>increases distribution of coins.</li>
+    </ol>
+
+    <h1>things we also believe in</h1>
+    <hr>
+    <h2> self-custody for all.</h2>
     <p>
         by now we've all heard the maxim, <i>"not your keys, not your coin,"</i> but self custody of
         bitcoin can be difficult to use and easy to mess up, leading many users to prefer to use
@@ -37,44 +105,7 @@ are as follows:
         <li>minimize access to secure information.</li>
     </ol>
 
-
-    <h1>vibrant bitcoin economy.</h1>
-    <p>
-        does the government create the free market or does the free market create the government?
-        which came first, the chicken or the egg? regardless of the philosophical implications of
-        the answer to this question, one can analyze the impact that the government has on the free
-        market and if that effect inherently increases the freedom of the market or restricts it.
-    </p>
-    <p>
-        legislative and executive branches seem to only serve to attempt to manipulate or control
-        the free market, and often are mere participants in the market when appropriating goods or
-        services. however the judicial function of government is unique. imagine a world without any
-        judiciary. it would be nearly impossible to do business as there would be no means of
-        resolving disputes and enforcing contracts. we'd all still live in caves. fortunately, the
-        free market demands a judiciary, or the development of the judiciary system to hold men to
-        their word creates a free market. <i>homo sapiens</i> leave the relative safety of their
-        caves and our modern society is born.
-    </p>
-
-    <p>
-        bitcoin is the first native judiciary system for the internet. at judica (hence the name) we
-        believe we can help bitcoin fulfil its potential as the best judiciary system possible for
-        the internet. the more sophisticated disputes that can be adjudicated using bitcoin, the
-        more vibrant the bitcoin economy becomes.
-    </p>
-    <p>
-        endeavoring to create a vibrant bitcoin economy isn't a statement of opinion on the classic
-        'medium of exchange v. store of value' debate. bitcoin <i>the asset</i> can in many cases be
-        abstracted out to the reduced role as fungible collateral. rather, a vibrant bitcoin economy
-        has three main positive effects:
-    </p>
-    <ol>
-        <li>more diverse use; more security.</li>
-        <li>more likely you can use you bitcoin when you need to.</li>
-        <li>increases distribution of coins.</li>
-    </ol>
-
-    <h1>unbreakable base layer.</h1>
+    <h2>unbreakable base layer.</h2>
 
     <p>
         bitcoin will be under attack by faceless adversaries threatened by permissionless
