fix out of sync text

--- a/content/about.html
+++ b/content/about.html
@@ -24,11 +24,10 @@ type='about'
 
 </div>
 <div class="main2" style="padding-top:2em">
-    judica is creating software that will have a remarkable impact on the
-    bitcoin ecosystem. we endeavor to provide these to the community openly. these applications
-    use judica's cutting edge bitcoin technologies, but we're exploring options to make them
-    available in a limited fashion without any new features added to bitcoin.
-
+judica is creating software that will have a remarkable impact on the bitcoin
+ecosystem. we endeavor to provide these to the community openly. these
+applications are available without any new features added to bitcoin, and can
+leverage new features as they become available.
     <div style="text-align:right"><a href="/charter/">software details ></a></div>
 </div>
 
