fix software link

--- a/content/about.html
+++ b/content/about.html
@@ -28,7 +28,7 @@ judica is creating software that will have a remarkable impact on the bitcoin
 ecosystem. we endeavor to provide these to the community openly. these
 applications are available without any new features added to bitcoin, and can
 leverage new features as they become available.
-    <div style="text-align:right"><a href="/charter/">software details ></a></div>
+    <div style="text-align:right"><a href="/software/">software details ></a></div>
 </div>
 
 <hr>
