new tabs for team links, make pictures clickable

--- a/content/about.html
+++ b/content/about.html
@@ -38,20 +38,26 @@ leverage new features as they become available.
     <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 20px">
 
         <div>
-            <img src="/img/team/jeremy.jpg" width="100%"/>
-            <a href="https://twitter.com/JeremyRubin">@jeremyrubin</a>
+            <a target="_blank" href="https://twitter.com/JeremyRubin">
+                <img src="/img/team/jeremy.jpg" width="100%"/>
+                @jeremyrubin
+            </a>
             <br>
             founder/ceo
         </div>
         <div>
-            <img src="/img/team/ponzini.jpg" width="100%"/>
-            <a href="https://twitter.com/ponzini">@ponzini</a>
+            <a target="_blank" href="https://twitter.com/ponzini">
+                <img src="/img/team/ponzini.jpg" width="100%"/>
+                @ponzini
+            </a>
             <br>
             software engineer
         </div>
         <div>
-            <img src="/img/team/keags.jpg" width="100%"/>
-            <a href="https://twitter.com/proofofkeags">@proofofkeags</a>
+            <a target="_blank" href="https://twitter.com/proofofkeags">
+                <img src="/img/team/keags.jpg" width="100%"/>
+                @proofofkeags
+            </a>
             <br>
             staff research engineer
         </div>
