makes blog easier to read

--- a/content/join/_index.html
+++ b/content/join/_index.html
@@ -54,7 +54,7 @@ draft=false
         <div style="text-align: center">
             <h1 >telegram channel</h1>
             <hr/>
-            <h2><a href="https://t.me/judicaorg">t.me/judicaorg</a></h2>
+            <h2><a target="_blank" href="https://t.me/judicaorg">t.me/judicaorg</a></h2>
         </div>
         <div></div>
 
