--- a/content/join/_index.html
+++ b/content/join/_index.html
@@ -52,9 +52,9 @@ draft=false
             <a href="https://acinq.co">ACINQ</a>, <a href="https://www.100x.group/">100x Group</a>, <a href="https://www.delphidigital.io/">Delphi Digital</a>.
         </div>
         <div style="text-align: center">
-            <h1 >telegram channel</h1>
+            <h1 >discord</h1>
             <hr/>
-            <h2><a target="_blank" href="https://t.me/judicaorg">t.me/judicaorg</a></h2>
+            <h2><a target="_blank" href="https://discord.gg/WfBjavZpmM">discord.gg/WfBjavZpmM</a></h2>
         </div>
         <div></div>
 
