--- a/content/charter.html
+++ b/content/charter.html
@@ -17,7 +17,7 @@ img = "/img/wizard2.gif"
 
     <p>
         bitcoin is the first native judiciary system for the internet. at judica (hence the name) we
-        believe we can help bitcoin fulfil its potential as the best judiciary system possible for
+        believe we can help bitcoin fulfill its potential as the best judiciary system possible for
         the internet. the more sophisticated disputes that can be adjudicated using bitcoin, the
         more vibrant the bitcoin economy becomes.
     </p>
@@ -30,13 +30,13 @@ img = "/img/wizard2.gif"
         digital assets with some set of algorithmic rules and objectives
         determined by the members. for example, the DAO might endeavor to invest
         in scientific research, manage the treasury for a defi protocol, or
-        administer the issuance art as nfts.
+        administer the issuance of art as nfts.
 
         any DAO (and really, any bitcoin smart contract) can use our open
         architecture to collectively self-custody and manage bitcoin and other
         virtual assets. judica's profit interest -- we are a startup after all
         -- is to provide value add apis, services, and support to the DAOs using
-        -- our open
+        our open source
         architecture.
     </p>
     <p>
@@ -75,7 +75,7 @@ img = "/img/wizard2.gif"
     <ol>
         <li>more diverse use; more security.</li>
         <li>more likely you can use you bitcoin when you need to.</li>
-        <li>increases distribution of coins.</li>
+        <li>increased distribution of coins.</li>
     </ol>
 
     <h1>things we also believe in</h1>
@@ -83,7 +83,7 @@ img = "/img/wizard2.gif"
     <h2> self-custody for all.</h2>
     <p>
         by now we've all heard the maxim, <i>"not your keys, not your coin,"</i> but self custody of
-        bitcoin can be difficult to use and easy to mess up, leading many users to prefer to use
+        bitcoin can be difficult to use and easy to mess up, leading many users to prefer using
         trusted third parties like exchanges to store their funds. these trusted third parties are
         centralized choke points where governments or other nefarious actors may steal coins or
         prevent you from spending your coin when you need to. in the free world, our institutions and
@@ -102,7 +102,7 @@ img = "/img/wizard2.gif"
     <ol>
         <li>one size does not fit all.</li>
         <li>inaccessible coins are useless.</li>
-        <li>minimize access to secure information.</li>
+        <li>minimized access to secure information.</li>
     </ol>
 
     <h2>unbreakable base layer.</h2>
