--- a/charter/index.html
+++ b/charter/index.html
@@ -5,7 +5,7 @@ liberty. judica is the platform for bitcoin community to build the projects that
 realize bitcoin's potential.
 while there are many areas we could focus on, our singular vision is on
 creating a...</p><h1>vibrant bitcoin economy.</h1><p>bitcoin is the first native judiciary system for the internet. at judica (hence the name) we
-believe we can help bitcoin fulfil its potential as the best judiciary system possible for
+believe we can help bitcoin fulfill its potential as the best judiciary system possible for
 the internet. the more sophisticated disputes that can be adjudicated using bitcoin, the
 more vibrant the bitcoin economy becomes.</p><h3>how we're accomplishing our mission.</h3><p>we're building a platform for decentralized autonomous organizations
 (DAOs) on bitcoin.
@@ -13,12 +13,12 @@ a DAO is a group of individuals that collectively manage a treasury of
 digital assets with some set of algorithmic rules and objectives
 determined by the members. for example, the DAO might endeavor to invest
 in scientific research, manage the treasury for a defi protocol, or
-administer the issuance art as nfts.
+administer the issuance of art as nfts.
 any DAO (and really, any bitcoin smart contract) can use our open
 architecture to collectively self-custody and manage bitcoin and other
 virtual assets. judica's profit interest -- we are a startup after all
 -- is to provide value add apis, services, and support to the DAOs using
--- our open
+our open source
 architecture.</p><p>although DAOs can rightfully be lampooned for a number of reasons --
 hallmark 'unserious' applications like buying the constitution; that the
 D the A and the O in DAO may not be an accurate description of what they
@@ -37,8 +37,8 @@ their word creates a free market. <i>homo sapiens</i> leave the relative safety 
 caves and our modern society is born.</p><p>endeavoring to create a vibrant bitcoin economy isn't a statement of opinion on the classic
 'medium of exchange v. store of value' debate. bitcoin <i>the asset</i> can in many cases be
 abstracted out to the reduced role as fungible collateral. rather, a vibrant bitcoin economy
-has three main positive effects:</p><ol><li>more diverse use; more security.</li><li>more likely you can use you bitcoin when you need to.</li><li>increases distribution of coins.</li></ol><h1>things we also believe in</h1><hr><h2>self-custody for all.</h2><p>by now we've all heard the maxim, <i>"not your keys, not your coin,"</i> but self custody of
-bitcoin can be difficult to use and easy to mess up, leading many users to prefer to use
+has three main positive effects:</p><ol><li>more diverse use; more security.</li><li>more likely you can use you bitcoin when you need to.</li><li>increased distribution of coins.</li></ol><h1>things we also believe in</h1><hr><h2>self-custody for all.</h2><p>by now we've all heard the maxim, <i>"not your keys, not your coin,"</i> but self custody of
+bitcoin can be difficult to use and easy to mess up, leading many users to prefer using
 trusted third parties like exchanges to store their funds. these trusted third parties are
 centralized choke points where governments or other nefarious actors may steal coins or
 prevent you from spending your coin when you need to. in the free world, our institutions and
@@ -47,7 +47,7 @@ to serve users world wide living under less friendly regimes. if history is any 
 liberal democratic societies do not always remain so.</p><p>at judica we're bucking the trend of reliance on centralized trusted third parties by
 building a future where users are empowered to manage state of the art coin custody
 solutions without the need for trusted third parties. we have three guiding principles for
-custody we're designing our solutions based on:</p><ol><li>one size does not fit all.</li><li>inaccessible coins are useless.</li><li>minimize access to secure information.</li></ol><h2>unbreakable base layer.</h2><p>bitcoin will be under attack by faceless adversaries threatened by permissionless
+custody we're designing our solutions based on:</p><ol><li>one size does not fit all.</li><li>inaccessible coins are useless.</li><li>minimized access to secure information.</li></ol><h2>unbreakable base layer.</h2><p>bitcoin will be under attack by faceless adversaries threatened by permissionless
 censorship-resistant money or those who seek to profit from instability.</p><p>as stewards of the bitcoin protocol, it is our job to stop all such efforts dead in their
 tracks. bitcoin is strong, but not unbreakable. though many memes have been made to suggest
 otherwise, the reality is that bitcoin's promise of unbreakability is yet to be achieved. at
